Nodes: Dragging-to-toggle feature not work well sometimes #44747

Closed
opened 2015-05-18 07:57:13 +02:00 by Leon Cheung · 14 comments
Member

System Information
Win 8.1 64bit | GTX680

Blender Version
Broken: 2.74.5 abb80ab

Short description of error
When it is needed to toggle multiple node buttons by dragging over them, it sometimes failed to work well (typically, when it happens, it just behaves like it is still on work with mouse curor over them, even after LMB was released), not sure why. For the three node editors, it can be hardly noticed because there are few such cases. But for other nodes, such as what's in the Animation Nodes addon, it can be noticed after a few drag trials.

Exact steps for others to reproduce the error
Install Animation Nodes addon (recommended), add a Transforms Output node, then try toggling the nine buttons (loc / rot / scale).

to.jpg

P.S. However, there is no problem when toggling them from the N side bar. I guess there would probably be sort of conflict againt the normal node drag gesture? (another related report )

**System Information** Win 8.1 64bit | GTX680 **Blender Version** Broken: 2.74.5 abb80ab **Short description of error** When it is needed to toggle multiple node buttons by dragging over them, it sometimes failed to work well (typically, when it happens, it just behaves like it is still on work with mouse curor over them, **even after LMB was released**), not sure why. For the three node editors, it can be hardly noticed because there are few such cases. But for other nodes, such as what's in the Animation Nodes addon, it can be noticed after a few drag trials. **Exact steps for others to reproduce the error** Install [Animation Nodes ](https://github.com/JacquesLucke/animation_nodes) addon (recommended), add a Transforms Output node, then try toggling the nine buttons (loc / rot / scale). ![to.jpg](https://archive.blender.org/developer/F176536/to.jpg) P.S. However, there is no problem when toggling them from the N side bar. I guess there would probably be sort of conflict againt the normal node drag gesture? ([another related report ](https://github.com/JacquesLucke/animation_nodes/issues/49))
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Installed the add=on and attempted to redo the bug but wasn't able to.

(Drag toggle works fine here in side-bar and in the node-editor).

Is there some way to make this happen more often?

Installed the add=on and attempted to redo the bug but wasn't able to. (Drag toggle works fine here in side-bar and in the node-editor). Is there some way to make this happen more often?
Author
Member

Just tried a bit more. I think it happens specifially when you dragging on the button while having the node dragged at the same time (by accident), especially when the initial speed is a bit fast. I just made a video here , and added by the time it happend there. Hope it helps.

Just tried a bit more. I think it happens specifially when you dragging on the button while having the node dragged at the same time (by accident), especially when the initial speed is a bit fast. I just made a video **[here ](https://youtu.be/pom7ClpEfVE)**, and added by the time it happend there. Hope it helps.

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was assigned by Sergey Sharybin 2015-05-25 20:23:59 +02:00

@ideasman42, as i understand it's mater of disabling button dragging when there's a modal operator running. And guess this is actually your area.

@ideasman42, as i understand it's mater of disabling button dragging when there's a modal operator running. And guess this is actually your area.

re:

when you dragging on the button while having the node dragged at the same time,

How are you initializing the drag to begin with?

re: > when you dragging on the button while having the node dragged at the same time, How are you initializing the drag to begin with?
Author
Member

eh... I guess mostly by clicking while dragging around the border of the checkbox instead of the center?

eh... I guess mostly by clicking while dragging around the border of the checkbox instead of the center?
Author
Member

It would be helpful to reproduce it by zooming out a node a lot. And I noticed a single or double clicking again somewhere apears to recover it from that behavoir.

It would be helpful to reproduce it by zooming out a node a lot. And I noticed a single or double clicking again somewhere apears to recover it from that behavoir.
Author
Member

I confirm It happens on all node mode (material nodes, compositor, etc), it just happens more obvious on that addon due to the node item design. Or can it possibly be an OS based issue? :| Since all people I know who are experiencing this is on Windows OS. Didn't get chance to test on other OS yet.

I confirm It happens on all node mode (material nodes, compositor, etc), it just happens more obvious on that addon due to the node item design. Or can it possibly be an OS based issue? :| Since all people I know who are experiencing this is on Windows OS. Didn't get chance to test on other OS yet.

This issue was referenced by bfa7586ba3

This issue was referenced by bfa7586ba33bd090af13b8671326cdffd4c7592b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44747
No description provided.