Fix T44747: Drag toggle /w nodes (glitch)

It was possible to perform actions while performing a drag-toggle.